# CaseGraph

./: .env  .env.example  .gitignore  Dockerfile  README.md  benchmark_runner.py  compute_metrics.py  corpus_data.py  generated_corpus.json  pyproject.toml
backend/: main.py
backend/assistant/: query_engine.py
backend/graph/: connection.py  test_connection.py  writer.py
backend/ingestion/: cleaner.py  ocr.py  pdf_extractor.py
backend/nlp/: field_stripper.py  ner.py  regex_extractor.py
backend/reasoning/: contradiction_detection.py  relation_extractor.py
docs/: EVALUATION.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: ContradictionsPage.tsx  GraphPage.tsx  QueryPage.tsx  UploadPage.tsx
frontend/src/store/: AppContext.tsx
tests/: test_contradiction.py  test_extractors.py  test_nlp.py  test_query_engine.py
