[project]
name = "casegraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "en-core-web-sm",
    "fastapi>=0.138.2",
    "pymupdf>=1.28.0",
    "pytesseract>=0.3.13",
    "python-multipart>=0.0.32",
    "spacy>=3.8.13",
    "uvicorn>=0.49.0",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
