[project]
name = "casegraph"
version = "0.1.0"
description = "AI-powered criminal investigation support system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "en-core-web-md",
    "fastapi>=0.138.2",
    "groq>=1.5.0",
    "neo4j>=6.2.0",
    "pymupdf>=1.28.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "spacy>=3.8.13",
    "uvicorn>=0.49.0",
    "pillow>=11.0.0",
]

[tool.uv.sources]
en-core-web-md = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl" }

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
